# els1

./: .gitignore  CMakeLists.txt  README.md
assets/scenes/: boxes.mtl
assets/shaders/: simpleShader.frag  simpleShader.frag.spv  simpleShader.vert  simpleShader.vert.spv
source/: AABB.cpp  AABB.h  AccessSpecifier.h  AssetManager.h  BVHNode.cpp  BVHNode.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  DrawPass.cpp  DrawPass.h  GPUStructs.h  Image.cpp  Image.h  InputSupport.cpp  InputSupport.h  Pass.cpp  Pass.h  PresentPass.cpp  PresentPass.h  PresentationController.cpp  PresentationController.h  RenderController.cpp  RenderController.h  RenderParameters.cpp  RenderParameters.h  Resource.cpp  Resource.h  ResourceAccessSpecifier.h  Scene.h  Shader.cpp  Shader.h  TimeSupport.cpp  TimeSupport.h  Tracer.cpp  Tracer.h  TransferPass.h  (+3 more)
